--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "prettier": "^3.7.4",
