--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "lightweight-charts": "^5.1.0",
@@ -24,6 +26,8 @@
     "query-string": "^9.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-use": "^17.6.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
